# simple-simd

./: Cargo.toml  README.md  rustfmt.toml
src/: lib.rs  simd_f32.rs  simd_f64.rs  simd_i16.rs  simd_i32.rs  simd_i64.rs
